--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".About"></activity>
+        <activity android:name=".AboutScreen"></activity>
         <activity android:name=".HowToPlay" />
         <activity android:name=".EndGameScreen" />
         <activity android:name=".GameScreen" />
