--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutScreen"></activity>
-        <activity android:name=".HowToPlay" />
+        <activity android:name=".HighScoresScreen"></activity>
+        <activity android:name=".AboutScreen" />
+        <activity android:name=".HowToPlayScreen" />
         <activity android:name=".EndGameScreen" />
         <activity android:name=".GameScreen" />
         <activity android:name=".SplashScreen">
